--- a/www/index.html.in
+++ b/www/index.html.in
@@ -68,6 +68,11 @@ SourceForge</a> and runs on Linux, FreeBSD, NetBSD, Solaris and AIX.</p>
 <p>tmux depends on <a href="http://www.monkey.org/~provos/libevent/">libevent 1.4 or 2.0</a> and a
 terminfo implementation (normally <a href="http://invisible-island.net/ncurses/">ncurses</a>).</p>
 
+<p>A few people have written programs which can be used with tmux:
+<a href="https://github.com/dominikh/tmux-ruby">tmux-ruby</a>,
+<a href="https://github.com/lmartinking/tmux-applets">tmux-applets</a> and
+<a href="https://github.com/remiprev/teamocil">teamocil</a>.</p>
+
                 <div id="screenshots">
                     <a href="tmux3.png"><img src="small-tmux3.png" alt="Screenshot"/></a>
                     <a href="tmux4.png"><img src="small-tmux4.png" alt="Screenshot"/></a>
