--- a/www/index.html.in
+++ b/www/index.html.in
@@ -70,6 +70,7 @@ terminfo implementation (normally <a href="http://invisible-island.net/ncurses/"
 
 <p>A few people have written programs which can be used with tmux:
 <a href="https://github.com/dominikh/tmux-ruby">tmux-ruby</a>,
+<a href="https://github.com/aziz/tmuxinator">tmuxinator</a>,
 <a href="https://github.com/lmartinking/tmux-applets">tmux-applets</a> and
 <a href="https://github.com/remiprev/teamocil">teamocil</a>.</p>
 
