--- a/www/index.html.in
+++ b/www/index.html.in
@@ -12,14 +12,14 @@
                 <p id="upper-left-title">tmux</p>
                 <ul id="left-menu">
                 <li><a href="http://downloads.sourceforge.net/tmux/tmux-%%VERSION%%.tar.gz">Download</a></li>
-                <li><a href="http://tmux.cvs.sourceforge.net/viewvc/*checkout*/tmux/tmux/NOTES">Release Notes</a></li>
-                <li><a href="http://tmux.cvs.sourceforge.net/viewvc/*checkout*/tmux/tmux/CHANGES">Changelog</a></li>
-                <li><a href="http://tmux.cvs.sourceforge.net/viewvc/*checkout*/tmux/tmux/FAQ">FAQ</a></li>
+                <li><a href="http://tmux.svn.sourceforge.net/viewvc/tmux/trunk/NOTES">Release Notes</a></li>
+                <li><a href="http://tmux.svn.sourceforge.net/viewvc/tmux/trunk/CHANGES">Changelog</a></li>
+                <li><a href="http://tmux.svn.sourceforge.net/viewvc/tmux/trunk/FAQ">FAQ</a></li>
 		<li><a href="http://www.openbsd.org/faq/faq7.html#tmux">tmux in the OpenBSD FAQ</a></li>
-		<li><a href="http://tmux.cvs.sourceforge.net/viewvc/tmux/tmux/examples/">Examples</a></li>
+		<li><a href="http://tmux.svn.sourceforge.net/viewvc/tmux/tmux/examples/">Examples</a></li>
                 <li>&nbsp;</li>
                 <li class="menu-headings">Source Code</li>
-		<li><a href="http://tmux.cvs.sf.net/viewvc/tmux/tmux/">SourceForge</a></li>
+		<li><a href="http://tmux.svn.sourceforge.net/viewvc/tmux/trunk/">SourceForge</a></li>
 		<li><a href="http://www.openbsd.org/cgi-bin/cvsweb/src/usr.bin/tmux/">OpenBSD</a></li>
                 <li>&nbsp;</li>
                 <li class="menu-headings">Support</li>
