Fix some warnings with newer autoconf, from Matt Curtis.

--- a/configure.ac
+++ b/configure.ac
@@ -336,7 +336,7 @@ AC_CHECK_FUNCS(
 
 # Check for BSD-style integer types.
 AC_MSG_CHECKING(for BSD-style unsigned types)
-AC_COMPILE_IFELSE(
+AC_COMPILE_IFELSE([AC_LANG_SOURCE(
 	[
 		#include <sys/types.h>
 		#ifdef HAVE_STDINT_H
@@ -346,7 +346,7 @@ AC_COMPILE_IFELSE(
 		#endif	
 		int main(void)
 		{ u_int8_t u8; u_int16_t u16; u_int32_t u32; u_int64_t u64; }
-	],
+       ])],
 	[AC_DEFINE(HAVE_BSD_TYPES) AC_MSG_RESULT(yes)],
 	AC_MSG_RESULT(no)
 )
@@ -370,7 +370,7 @@ fi
 
 # Look for __progname.
 AC_MSG_CHECKING(for __progname)
-AC_LINK_IFELSE(
+AC_LINK_IFELSE([AC_LANG_SOURCE(
 	[
 		#include <stdio.h>
 		#include <stdlib.h>
@@ -380,7 +380,7 @@ AC_LINK_IFELSE(
 			printf("%s\n", cp);
 			exit(0);
 		}
-	],
+       ])],
 	[AC_DEFINE(HAVE___PROGNAME) AC_MSG_RESULT(yes)],
 	AC_MSG_RESULT(no)
 )
