--- a/Makefile.am
+++ b/Makefile.am
@@ -66,6 +66,7 @@ dist_tmux_SOURCES = \
 	cmd-capture-pane.c \
 	cmd-choose-buffer.c \
 	cmd-choose-client.c \
+	cmd-choose-list.c \
 	cmd-choose-tree.c \
 	cmd-clear-history.c \
 	cmd-clock-mode.c \
@@ -135,6 +136,7 @@ dist_tmux_SOURCES = \
 	cmd.c \
 	colour.c \
 	control.c \
+	control-notify.c \
 	environ.c \
 	format.c \
 	grid-utf8.c \
