Link to git instructions from index.html.

--- a/www/index.html.in
+++ b/www/index.html.in
@@ -36,7 +36,11 @@ windows), each running a separate program, to be created, accessed, and
 controlled from a single screen. tmux may be detached from a screen and
 continue running in the background, then later reattached.</p>
 
-<p>The latest version is <a href="http://downloads.sourceforge.net/tmux/tmux-%%VERSION%%.tar.gz">tmux %%VERSION%%</a>.</p>
+<p>The
+<a href="http://downloads.sourceforge.net/tmux/tmux-%%VERSION%%.tar.gz">
+latest release is tmux %%VERSION%%</a> or
+<a href="http://sourceforge.net/scm/?type=git&group_id=200378">
+get the development version from git.</a></p>
 
 <p>tmux uses a client-server model. The server holds multiple sessions and each
 window is an independent entity which may be freely linked to multiple sessions,
