Move NOTES->README, move Vim syntax file documentation to the file itself and otherwise tweak some bits.

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,7 @@ dist_man1_MANS = tmux.1
 
 # Distribution tarball options.
 EXTRA_DIST = \
-	CHANGES FAQ NOTES TODO examples compat \
+	CHANGES FAQ README TODO examples compat \
 	array.h compat.h tmux.h osdep-*.c
 dist-hook:
 	grep "^#found_debug=" configure
