--- a/www/index.html.in
+++ b/www/index.html.in
@@ -31,9 +31,8 @@ background) and reattach them to a different terminal. And do a lot more. See
 <a href="http://www.openbsd.org/cgi-bin/man.cgi?query=tmux&sektion=1">
 the manual</a>.</p>
 
-<p>Download
-<b><a href="http://downloads.sourceforge.net/tmux/tmux-%%VERSION%%.tar.gz">
-tmux %%VERSION%%</a></b> or
+<p><b><a href="http://downloads.sourceforge.net/tmux/tmux-%%VERSION%%.tar.gz">
+Download tmux %%VERSION%%</a></b> or
 <a href="https://sourceforge.net/p/tmux/tmux-code/ci/master/tree/">
 get the development version.</a></p>
 
