www Project Page -> SourceForge Page

--- a/www/index.html.in
+++ b/www/index.html.in
@@ -16,7 +16,7 @@
 		<li><a href="http://www.openbsd.org/cgi-bin/man.cgi?query=tmux&sektion=1">Manual Page</a></li>
 		<li><a href="https://sourceforge.net/p/tmux/tmux-code/ci/master/tree/FAQ">FAQ</a></li>
 		<li><a href="https://sourceforge.net/p/tmux/tmux-code/ci/master/tree/">Source Code</a></li>
-		<li><a href="http://sf.net/projects/tmux">Project Page</a></li>
+		<li><a href="http://sf.net/projects/tmux">SourceForge Page</a></li>
 		<li><a href="https://lists.sourceforge.net/lists/listinfo/tmux-users">Mailing List</a></li>
 		<li><a href="irc://irc.freenode.net/tmux">IRC Channel</a></li>
 		</ul>
