--- a/Makefile.am
+++ b/Makefile.am
@@ -233,6 +233,9 @@ endif
 if NO_B64_NTOP
 nodist_tmux_SOURCES += compat/b64_ntop.c
 endif
+if NO_CFMAKERAW
+nodist_tmux_SOURCES += compat/cfmakeraw.c
+endif
 
 # Build tmux.1 in the right format.
 tmux.1: tmux.1.in
