Use _XPG6 on Solaris with GCC because the headers are insane and don't like GCC with -std=gnu99 and _XPG4_2. We should not really be using _XPG* at all but there doesn't seem to be a magic define that says "give me the latest standard", and things are further confused by the CMSG_DATA check in configure.ac which sets _XOPEN_SOURCE _XOPEN_SOURCE_EXTENDED.
While here add COPYING to EXTRA_DIST.

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,7 @@ CLEANFILES = tmux.1.mdoc tmux.1.man
 
 # Distribution tarball options.
 EXTRA_DIST = \
-	CHANGES FAQ README TODO examples compat \
+	CHANGES FAQ README TODO COPYING examples compat \
 	array.h compat.h tmux.h osdep-*.c mdoc2man.awk tmux.1
 dist-hook:
 	grep "^#found_debug=" configure
@@ -48,7 +48,11 @@ endif
 
 # Set flags for Solaris.
 if IS_SUNOS
+if IS_GCC
+CPPFLAGS += -D_XPG6 -D__EXTENSIONS__ -D_POSIX_PTHREAD_SEMANTICS
+else
 CPPFLAGS += -D_XPG4_2 -D__EXTENSIONS__ -D_POSIX_PTHREAD_SEMANTICS
+endif
 endif
 
 # Set flags for Sun CC.
