Check setupterm() in libtinfo also
Some ncurses packages have build time configuration options to separate its
different parts into separate libraries.  Some Linux distributions in
particular separate out the terminfo routines in to libtinfo.

This change teaches configure that setupterm() can also be found there.

--- a/configure.ac
+++ b/configure.ac
@@ -135,7 +135,7 @@ fi
 # Look for curses.
 AC_SEARCH_LIBS(
 	setupterm,
-	[terminfo curses ncurses],
+	[terminfo curses ncurses tinfo],
 	found_curses=yes,
 	found_curses=no
 )
