NetBSD broke strnvis when they added it, check for that.

--- a/configure.ac
+++ b/configure.ac
@@ -312,6 +312,16 @@ AM_CONDITIONAL(NO_STRTONUM, [test "x$found_strtonum" = xno])
 # Look for strnvis, compat/{vis,unvis}.c used if missing.
 AC_CHECK_FUNC(strnvis, found_strnvis=yes, found_strnvis=no)
 if test "x$found_strnvis" = xyes; then
+	AC_MSG_CHECKING(if strnvis is broken)
+	AC_EGREP_HEADER([strnvis\(char \*, const char \*, size_t, int\)],
+		        vis.h,
+		        AC_MSG_RESULT(no),
+			[found_strnvis=no])
+	if test "x$found_strnvis" = xno; then
+		AC_MSG_RESULT(yes)
+	fi
+fi
+if test "x$found_strnvis" = xyes; then
 	AC_DEFINE(HAVE_VIS)
 fi
 AM_CONDITIONAL(NO_VIS, [test "x$found_strnvis" = xno])
