Add osdep-cgywin.c as a copy of osdep-linux.c, from J Raynor.

--- a/configure.ac
+++ b/configure.ac
@@ -501,6 +501,10 @@ case "$host_os" in
 		AC_MSG_RESULT(hpux)
 		PLATFORM=hpux
 		;;
+	*cygwin*)
+		AC_MSG_RESULT(cygwin)
+		PLATFORM=cygwin
+		;;
 	*)
 		AC_MSG_RESULT(unknown)
 		PLATFORM=unknown
