Makefile.am:  Honour $srcdir for mdoc2man.awk
Honour out-of-tree srcdir installs when generating the man page.  Noticed by
Jon Tibble.

--- a/Makefile.am
+++ b/Makefile.am
@@ -247,7 +247,7 @@ install-exec-hook:
 			>$(srcdir)/tmux.1.mdoc; \
 	else \
 		sed -e "s|@SYSCONFDIR@|$(sysconfdir)|g" $(srcdir)/tmux.1| \
-			$(AWK) -fmdoc2man.awk >$(srcdir)/tmux.1.man; \
+			$(AWK) -f $(srcdoc)/mdoc2man.awk >$(srcdir)/tmux.1.man; \
 	fi
 	$(MKDIR_P) $(DESTDIR)$(mandir)/man1
 	$(INSTALL_DATA) $(srcdir)/tmux.1.@MANFORMAT@ \
