Add compat/fparseln() for non-BSD systems
Linux and friends don't natively have fparseln() so add it to compat/ and
ensure autotools can pick it up.

--- a/Makefile.am
+++ b/Makefile.am
@@ -213,6 +213,9 @@ endif
 if NO_FGETLN
 nodist_tmux_SOURCES += compat/fgetln.c
 endif
+if NO_FPARSELN
+nodist_tmux_SOURCES += compat/fparseln.c
+endif
 if NO_GETOPT
 nodist_tmux_SOURCES += compat/getopt.c
 endif
