Tweak www and add RELEASE variable for current release version so we don't need to turn it back and forth when updating.

--- a/Makefile.am
+++ b/Makefile.am
@@ -267,4 +267,4 @@ update-index.html:
 			convert "$$i" -resize 200x150 "small-$$i"; \
 		done \
 	)
-	sed "s/%%VERSION%%/${VERSION}/g" www/index.html.in >www/index.html
+	sed "s/%%RELEASE%%/${RELEASE}/g" www/index.html.in >www/index.html
