--- a/configure.ac
+++ b/configure.ac
@@ -2,6 +2,8 @@
 
 # Miscellaneous autofoo bullshit.
 AC_INIT(tmux, 2.0)
+RELEASE=1.9a
+AC_SUBST(RELEASE)
 
 AC_CONFIG_AUX_DIR(etc)
 AM_INIT_AUTOMAKE([foreign subdir-objects])
