We do not need to add /usr/local to CPPFLAGS; if configure managed to pass then the dependencies must already be in the search path. Reported by Romain Naour.

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,12 +36,12 @@ CFLAGS += -Wdeclaration-after-statement
 CPPFLAGS += -DDEBUG
 endif
 if IS_GCC4
-CPPFLAGS += -iquote. -I/usr/local/include
+CPPFLAGS += -iquote.
 if IS_DEBUG
 CFLAGS += -Wno-pointer-sign
 endif
 else
-CPPFLAGS += -I. -I- -I/usr/local/include
+CPPFLAGS += -I. -I-
 endif
 endif
 
